--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "^0.29.4"
+    "react-native-maps": "^0.29.4",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
